# workorder-geocode-cli

./: .gitignore  LICENSE  README.md  bounds.json  pyproject.toml  requirements.txt  synthetic_work_orders_sample.xlsx  workorder-geocode-cli  workorder_geocode_cli.py
tests/: test_smoke.py  test_static_fixture.py
